<resources>
    <string name="app_name">Blink Break</string>
    <string name="action_settings">Settings</string>
    <string name="blink_break_service_label">Blink Break</string>

    <string name="write_settings_required">Write settings permission required.</string>
    <string name="draw_overlay_required">Draw Overlay permission required.</string>

    <string name="service_activated">Blink Break Activated</string>
    <string name="service_deactivated">Blink Break Deactivated</string>
    <string name="break_duration">For a duration of:</string>
    <string name="break_duration_sample">0</string>
    <string name="break_every">Break:</string>
    <string name="break_every_sample">0</string>
    <string name="ok">OK</string>
    <string name="break_options">Break options</string>
    <string name="have_a_break_message">It\'s time for a rest! Have a break.</string>
    <string name="have_a_break_ticker">Protect yourself from RSI consequences.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_lower_brightness">Lower brightness on the device during the break</string>

    <string name="service_is_active">Blink Break service is active.</string>
    <string name="service_task_notification_channel_name">Blink Break Job</string>
    <string name="service_notification_channel_name">Blink Break</string>
    <string name="show_rsi_break_window">Show RSI break window on top of your apps</string>
    <string name="show_rsi_break_window_info">RSI window covers your device\'s screen,
        countdowns to the end of the break and helps you remember about them.
        You can skip or postpone the window if you want or if it\'s not the right moment for a rest.</string>
    <string name="skip_the_break">Skip the break</string>

    <!--RSI window-->
    <string name="window_message">Have a break.
        Protect yourself from RSI consequences - blink, look around.</string>
    <string name="window_time_for_a_break">Time for a break!</string>
    <string name="window_countdown">00:00</string>
    <string name="window_postpone_the_break">Postpone the break</string>
    <string name="countdown_finished">Finished!</string>

    <!--settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_info_title">About application</string>
    <string name="settings_info_summary">Version 0.9 beta</string>
    <string name="settings_info_author">Blink Break\n\n
                                All rights reserved\n
                                Version 0.9 beta\n
                                Codename: TM11\n
                                Author: Michał Smutkiewicz\n
                                &#169; Aesthetic Apps Studios 2018
    </string>
    <string name="settings_info_author_title">About the app</string>
    <string name="settings_notify_when_locked_title">Locked/screen off device notifications</string>
    <string name="settings_notify_when_locked_summary">Show notifications also when device is locked</string>
    <string name="settings_reset_stats_title">Reset statistics</string>
    <string name="settings_reset_stats_summary">Reset all your app\'s statistics such as amount of skipped/unskipped breaks, their durations etc.</string>
    <string name="settings_stats_message">All your statistics data will be lost. Continue?</string>
    <string name="settings_postpone_break_duration">Postpone break duration</string>

    <!--Welcome Screen-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <!--slider-->
    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The risk of suffering injury increases the longer users work without breaks.
        Blink Break app simply offers reminders to take a break now and then. </string>

    <string name="slide_2_title">What is Repetitive Strain Injury?</string>
    <string name="slide_2_desc">Repetitive Strain Injury is an illness which can occur
        as a result of continuous work with a mouse, keyboard or smarthphone.</string>

    <string name="slide_3_title">Using breaks</string>
    <string name="slide_3_desc">Plan your breaks with app\'s section "Break options".
        Set an interval between them and your preffered duration of the break.</string>

    <string name="slide_4_title">Notifications</string>
    <string name="slide_4_desc">Enable notifications to be notified about the breaks. Enable RSI
        window or lowering brightness to be forced by our alert window to have a rest and relax.
        Blink, look away and do not stick to your phone!</string>

    <!--Stats-->
    <string name="statistics">Statistics</string>
    <string name="stats_last_break">Last break:</string>
    <string name="stats_unskipped_breaks">Unskipped breaks:</string>
    <string name="stats_skipped_breaks">Skipped breaks:</string>
    <string name="stats_maximal_break_duration">Maximal break duration:</string>
    <string name="stats_duration_of_unskipped_breaks">Duration of unskipped breaks:</string>
    <string name="stats_unskipped_breaks_in_a_row">%1$s %2$d unskipped break(s) in a row%3$s</string>
    <string name="stats_only">Only</string>
    <string name="stats_nice">Nice, that\'s</string>
    <string name="stats_wow">Wow, that\'s</string>

    <string name="turn_off_service">Turn off the service</string>

</resources>
